stream_sync/src/css/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: aliceblue;
}

html,
body {
  height: 100%;
}
code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.header {
  margin-top: 40px;
  border: 0;
}

#root {
  min-height: 100%;
}

.row {
  display: flex;
  min-height: 100%;
  height: 94vh;
  align-items: center;
  justify-content: center;
}

.select_column {
  width: 50%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 3em;
  transition: width 0.5s;
}
.select_column:hover {
  width: 100%;
}

.select_column:link {
  color: black;
}

.select_column:visited {
  color: black;
}

.select_column:link {
  text-decoration: none;
}

.host {
  background: antiquewhite;
  border-right: 2px solid black;
}

.join {
  background: aquamarine;
  border-left: 2px solid black;
}

.emoji-mart {
  position: absolute;
  top: 23%;
}
.emoji-mart-scroll {
  border-bottom: 0;
  margin-bottom: 6px;
}

.emoji-mart-scroll + .emoji-mart-bar {
  display: none;
}

.emoji {
  font-weight: 400;
  font-family: apple color emoji, segoe ui emoji, noto color emoji,
    android emoji, emojisymbols, emojione mozilla, twemoji mozilla,
    segoe ui symbol;
  font-size: 1.2em;
}

.emoji-button {
  border: none;
}

.emoji-button:hover {
  border: none;
}

.chat_box {
  height: 70vh;
  overflow-y: auto;
}

.chat_user_name {
  /* font-size: 0.7em; */
  margin: 0 17px 2px 0;
  color: grey;
}

.self {
  float: right;
}

.player_container {
  display: flex;
  align-items: center;
  justify-content: center;
}
.left_tile_custom {
  flex-direction: column;
  justify-content: center;
}

.avatar {
  width: 30px;
  text-align: center;
  height: 30px;
  background-color: green;
  border-radius: 50%;
  font-size: 1.2em;
  color: white;
  text-transform: uppercase;
  margin: 5px;
}

.avatar_container {
  display: flex;
}

.info_box {
  margin: 3%;
}

